# translateTool

./: CMakeLists.txt  LICENSE  base_translate.cpp  base_translate.h  define.h  google_translate.cpp  google_translate.h  main.cpp  translate_factory.cpp  translate_factory.h  youdao_translate.cpp  youdao_translate.h
